5/26/11 factor out duplicate code in WireSegment subclasses
5/26/11 remove unnecessary observers in Wire subclasses
5/26/11 add cleanup to Wire and WireSegment
5/26/11 make ICircuit.getVoltageAt implementations easier to read
# 1.00.06 (52426) May 25, 2011
5/25/11 make viewport in E-Field Detector narrower to conserve space
5/25/11 fix: horizontal top wire in Combination1 circuit is too low, should look like Combination2 circuit
5/25/11 change labels on capacitance and plate charge meters in Multiple Capacitors tab
5/25/11 fix plate voltage in Combination 1 circuit
5/25/11 change request: make capacitance slider thumb point to the right
5/25/11 remove voltage attribute from wire model
5/25/11 implement voltage computation for wires in Combination2 circuit
5/25/11 implement voltage computation for wires in Combination1 circuit
5/25/11 implement voltage computation for wires in Parallel circuits
5/25/11 implement voltage computation for wires in Series circuits
5/25/11 use ArrayList<Wire> in "Single" circuit, so that it's like the other circuits and can be more easily refactored
5/25/11 add debug shapes to Multiple Capacitors tab
5/25/11 generalize EFieldShapesDebugNode to work with any ICircuit
5/25/11 generalize VoltageShapesDebugNode to work with any ICircuit
5/19/11 create a circuit node (DielectricCircuitNode) for the circuit in "Dielectric" tab
5/19/11 remove dependency on DielectricModel in shape debug nodes
5/19/11 move dielectric visibility handling into CapacitorNode
5/19/11 delete ICapacitor, only need one type
5/19/11 collapsed circuit node type hierarchy into a single general node that handles all circuit types
5/19/11 move creation of capacitor nodes to circuit node base class
5/19/11 simplify implementation of SeriesCircuitNode, rendering order is not important because wire shapes account for occlusion
5/19/11 add varargs versions of wire constructors, to improve usage readability
# 1.00.05 (52159) May 18, 2011