@@ -9,7 +9,6 @@ import edu.colorado.phet.capacitorlab.model.CLModelViewTransform3D;
 import edu.colorado.phet.capacitorlab.shapes.WireShapeFactory;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
-import edu.colorado.phet.common.phetcommon.util.function.Function0;
 import edu.colorado.phet.common.phetcommon.view.util.ShapeUtils;
 
 /**
@@ -24,22 +23,19 @@ import edu.colorado.phet.common.phetcommon.view.util.ShapeUtils;
 public class Wire {
 
     private final ArrayList<WireSegment> segments;
+    private final SimpleObserver segmentObserver;
     private final double thickness;
     private final WireShapeFactory shapeFactory;
 
     // observable properties
     private final Property<Shape> shapeProperty; // Shape in view coordinates!
 
-    public Wire( CLModelViewTransform3D mvt, double thickness, Function0<ArrayList<WireSegment>> createWireSegments ) {
-        this( mvt, thickness, createWireSegments.apply() );
-    }
-
     public Wire( CLModelViewTransform3D mvt, double thickness, final WireSegment segment ) {
         this( mvt, thickness, new ArrayList<WireSegment>() {{ add( segment ); }} );
     }
 
     public Wire( CLModelViewTransform3D mvt, double thickness, ArrayList<WireSegment> segments ) {
-        assert ( segments != null && segments.size() > 0 );
+        assert ( segments != null );
         assert ( thickness > 0 );
 
         this.segments = new ArrayList<WireSegment>( segments );
@@ -49,23 +45,32 @@ public class Wire {
         this.shapeProperty = new Property<Shape>( createShape() );
 
         // when any segment changes, update the shape property
-        {
-            SimpleObserver segmentObserver = new SimpleObserver() {
-                public void update() {
-                    setShape( createShape() );
-                }
-            };
-            for ( WireSegment segment : segments ) {
-                segment.startPointProperty.addObserver( segmentObserver );
-                segment.endPointProperty.addObserver( segmentObserver );
+        segmentObserver = new SimpleObserver() {
+            public void update() {
+                setShape( createShape() );
             }
+        };
+        for ( WireSegment segment : segments ) {
+            segment.startPointProperty.addObserver( segmentObserver );
+            segment.endPointProperty.addObserver( segmentObserver );
         }
+    }
+
+    // For use by subclasses who wish to add their segments via addSegment.
+    protected Wire( CLModelViewTransform3D mvt, double thickness ) {
+        this( mvt, thickness, new ArrayList<WireSegment>() );
     }
 
     public void cleanup() {
         for ( WireSegment segment : segments ) {
             segment.cleanup();
         }
+    }
+
+    protected void addSegment( WireSegment segment ) {
+        segments.add( segment );
+        segment.startPointProperty.addObserver( segmentObserver );
+        segment.endPointProperty.addObserver( segmentObserver );
     }
 
     public double getThickness() {
@@ -94,5 +99,13 @@ public class Wire {
 
     protected Shape createShape() {
         return shapeFactory.createWireShape();
+    }
+
+    protected double getCornerOffset() {
+        return shapeFactory.getCornerOffset();
+    }
+
+    protected double getEndOffset() {
+        return shapeFactory.getEndOffset();
     }
 }
