@@ -18,6 +18,9 @@ import edu.colorado.phet.capacitorlab.model.wire.WireSegment;
  */
 public class WireShapeFactory {
 
+    // Determines how the wires are capped. If you change this, you'll need to fiddle with getEndOffset and getCornerOffset.
+    private static final int CAP_STYLE = BasicStroke.CAP_ROUND;
+
     private final Wire wire;
     private final CLModelViewTransform3D mvt;
 
@@ -39,8 +42,18 @@ public class WireShapeFactory {
     // Create the shape for one wire segment.
     private Shape createWireSegmentShape( WireSegment segment, double thickness ) {
         Line2D line = new Line2D.Double( segment.startPointProperty.get(), segment.endPointProperty.get() );
-        Stroke stroke = new BasicStroke( (float) thickness, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER ); // use CAP_BUTT so that ends are accurate
+        Stroke stroke = new BasicStroke( (float) thickness, CAP_STYLE, BasicStroke.JOIN_MITER );
         Shape s = new Area( stroke.createStrokedShape( line ) );
         return mvt.modelToView( s );
+    }
+
+    // Offset required to make 2 segments join seamlessly at a corner. This is specific to CAP_STYLE.
+    public double getCornerOffset() {
+        return 0;
+    }
+
+    // Offset required to make a wire align properly with some endpoint (eg, a battery terminal). This is specific to CAP_STYLE.
+    public double getEndOffset() {
+        return wire.getThickness() / 2;
     }
 }
